package com.university.project.legendsofswordandwand.service.battle;

import com.university.project.legendsofswordandwand.battle.BattleState;
import com.university.project.legendsofswordandwand.model.enums.ActionType;
import com.university.project.legendsofswordandwand.model.enums.BattleStatus;
import java.util.Map;

public interface IBattleService {

  BattleState initializePvEBattle(Long campaignId, int playerCumulativeLevel);

  BattleState initializePvPBattle(Long senderPartyId, Long receiverPartyId, Long invitationId);

  BattleState executePlayerAction(
      BattleState state, ActionType actionType, Long targetBattleId, Integer abilityIndex);

  BattleState executeEnemyTurn(BattleState state);

  BattleStatus checkBattleStatus(BattleState state);

  Map<String, Object> awardBattleRewards(BattleState state);

  void applyBattleLoss(BattleState state);

  void updatePvPResult(BattleState state);
}
